--- a/app/globals.css
+++ b/app/globals.css
@@ -1,24 +1,33 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-@theme {
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  * {
+    @apply box-border;
   }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  body {
+    @apply font-poppins bg-body text-black tracking-[0.5px];
+  }
+  h1, h2, h3 {
+    @apply font-lora font-bold;
+  }
+  h1 {
+    @apply text-[64px] leading-[84px];
+  }
+  h2 {
+    @apply text-[32px] leading-[46px];
+  }
+  h3 {
+    @apply text-[20px] leading-[30px];
+  }
+  p {
+    @apply text-black/80 leading-8;
+  }
+  a {
+    @apply text-white hover:text-orange transition-all duration-300 cursor-pointer;
+  }
+  label {
+    @apply text-white text-sm uppercase font-normal block mb-2;
+  }
 }
