--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,19 @@
     @apply text-white text-sm uppercase font-normal block mb-2;
   }
 }
+
+@layer utilities {
+  @keyframes slideIn {
+    from {
+      transform: translateY(50px);
+      opacity: 0;
+    }
+    to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  .animate-slideIn {
+    animation: slideIn 0.3s ease-out;
+  }
+}
